# zokrates-js-node

./: Cargo.toml  Dockerfile  Dockerfile.rust-wasm-env  README.md  gulpfile.js  index.d.ts  index.js  package-lock.json  package.json  utils.js
.circleci/: config.yml
lib/: index.d.ts  index.js  utils.js
scripts/: build.sh  build_docker.sh  get_stdlib.sh  publish.sh
src/: lib.rs
