[package]
name = "zokrates-wasm"
version = "1.0.20"
authors = ["Darko Macesic"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.1.4"
js-sys = "0.3.33"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.46", features = ["serde-serialize"] }
zokrates_core = { git = "https://github.com/Zokrates/ZoKrates", branch = "wasm-friendly", features = ["wasm"] }
zokrates_field = { git = "https://github.com/Zokrates/ZoKrates", branch = "wasm-friendly" }
zokrates_abi = { git = "https://github.com/Zokrates/ZoKrates", branch = "wasm-friendly" }

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
